Cleanup before adding notification changes.